--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2020.11.8
 numpy==1.19.4
 pandas==1.1.4
 pygame==2.0.0
+pygame-widgets==0.2.7
 python-dateutil==2.8.1
 pytz==2020.4
 six==1.15.0
